--- a/style.css
+++ b/style.css
@@ -30,3 +30,15 @@ p {
   color: red;
 }
 
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.matador {
+  animation: spin 2s linear infinite;
+}
